fixing code to align with odin solution

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -34,14 +34,6 @@ body {
   padding: 0px
 }
 
-.notification {
-  display: flex;
-  justify-content: end;
-  align-items: center;
-  margin-left:auto;
-  gap: 16px;
-}
-
 button {
   border: none;
   border-radius: 8px;
@@ -59,5 +51,14 @@ a {
 ul {
   list-style-type: none;
   display: flex;
+  margin: 0;
+  padding: 0;
   gap: 16px;
 }
+
+.left, .right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
